<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android "\n" and Java by Square, Inc</string>

    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="filename">filename</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="my_description">my description</string>
    <string name="glide">Glide - Image Loading Library by BumTech</string>
    <string name="load_app">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="sub_path">/repos/repository.zip</string>
    <string name="please_select_file">Please select the file to download</string>
    <string name="Download">Download</string>
    <string name="we_are_downloading">We are loading</string>
    <string name="file_name_">File name:</string>
    <string name="status">Status:</string>
    <string name="loadapp_">LoadApp- ..</string>
    <string name="_">-</string>
    <string name="ok">OK</string>
    <string name="description">description</string>
</resources>
